test/pass/more-string.min
# Should join these strings
program
start
    "hello" 32 "world" 0xa 0 !
end
