test/fail/addr2.min
program
    string y := "hello"
start
    &y!
end
